crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_activation_script_cmd_prepend.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
@chcp 65001 > nul
@SET "PATH=/usr/local/bin:%PATH%"
@SET "PATH=/sbin:%PATH%"
@SET "PATH=/usr/sbin:%PATH%"
@SET "PATH=/bin:%PATH%"
@SET "PATH=/usr/bin:%PATH%"
@SET "PATH=__PREFIX__/bin:%PATH%"
@SET "CONDA_SHLVL=1"
@SET "CONDA_PREFIX=__PREFIX__"
