crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_activation_script_cmd_replace.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
@chcp 65001 > nul
@SET "PATH=__PREFIX__/bin"
@SET "PATH=%PATH%:/usr/bin"
@SET "PATH=%PATH%:/bin"
@SET "PATH=%PATH%:/usr/sbin"
@SET "PATH=%PATH%:/sbin"
@SET "PATH=%PATH%:/usr/local/bin"
@SET "CONDA_SHLVL=1"
@SET "CONDA_PREFIX=__PREFIX__"
